adding all working models.

--- a/01_run_existing_models.ipynb
+++ b/01_run_existing_models.ipynb
@@ -19,36 +19,36 @@
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-15 13:38:13,177 : MainThread : INFO : epoch: 0\n",
-      "2023-03-15 13:38:13,438 : MainThread : INFO : epoch: 1\n",
-      "2023-03-15 13:38:13,494 : MainThread : INFO : epoch: 2\n",
-      "2023-03-15 13:38:13,553 : MainThread : INFO : epoch: 3\n",
-      "2023-03-15 13:38:13,607 : MainThread : INFO : epoch: 4\n",
-      "2023-03-15 13:38:13,659 : MainThread : INFO : epoch: 5\n",
-      "2023-03-15 13:38:13,711 : MainThread : INFO : epoch: 6\n",
-      "2023-03-15 13:38:13,762 : MainThread : INFO : epoch: 7\n",
-      "2023-03-15 13:38:13,813 : MainThread : INFO : epoch: 8\n",
-      "2023-03-15 13:38:13,861 : MainThread : INFO : epoch: 9\n",
-      "2023-03-15 13:38:14,391 : MainThread : INFO : epoch: 0\n",
-      "2023-03-15 13:38:14,524 : MainThread : INFO : epoch: 1\n",
-      "2023-03-15 13:38:14,574 : MainThread : INFO : epoch: 2\n",
-      "2023-03-15 13:38:14,622 : MainThread : INFO : epoch: 3\n",
-      "2023-03-15 13:38:14,672 : MainThread : INFO : epoch: 4\n",
-      "2023-03-15 13:38:14,723 : MainThread : INFO : epoch: 5\n",
-      "2023-03-15 13:38:14,773 : MainThread : INFO : epoch: 6\n",
-      "2023-03-15 13:38:14,822 : MainThread : INFO : epoch: 7\n",
-      "2023-03-15 13:38:14,872 : MainThread : INFO : epoch: 8\n",
-      "2023-03-15 13:38:14,921 : MainThread : INFO : epoch: 9\n",
-      "2023-03-15 13:38:15,446 : MainThread : INFO : epoch: 0\n",
-      "2023-03-15 13:38:15,553 : MainThread : INFO : epoch: 1\n",
-      "2023-03-15 13:38:15,606 : MainThread : INFO : epoch: 2\n",
-      "2023-03-15 13:38:15,655 : MainThread : INFO : epoch: 3\n",
-      "2023-03-15 13:38:15,706 : MainThread : INFO : epoch: 4\n",
-      "2023-03-15 13:38:15,756 : MainThread : INFO : epoch: 5\n",
-      "2023-03-15 13:38:15,807 : MainThread : INFO : epoch: 6\n",
-      "2023-03-15 13:38:15,865 : MainThread : INFO : epoch: 7\n",
-      "2023-03-15 13:38:15,918 : MainThread : INFO : epoch: 8\n",
-      "2023-03-15 13:38:15,978 : MainThread : INFO : epoch: 9\n"
+      "2023-03-15 13:51:44,669 : MainThread : INFO : epoch: 0\n",
+      "2023-03-15 13:51:44,908 : MainThread : INFO : epoch: 1\n",
+      "2023-03-15 13:51:44,963 : MainThread : INFO : epoch: 2\n",
+      "2023-03-15 13:51:45,020 : MainThread : INFO : epoch: 3\n",
+      "2023-03-15 13:51:45,073 : MainThread : INFO : epoch: 4\n",
+      "2023-03-15 13:51:45,127 : MainThread : INFO : epoch: 5\n",
+      "2023-03-15 13:51:45,178 : MainThread : INFO : epoch: 6\n",
+      "2023-03-15 13:51:45,230 : MainThread : INFO : epoch: 7\n",
+      "2023-03-15 13:51:45,282 : MainThread : INFO : epoch: 8\n",
+      "2023-03-15 13:51:45,330 : MainThread : INFO : epoch: 9\n",
+      "2023-03-15 13:51:45,825 : MainThread : INFO : epoch: 0\n",
+      "2023-03-15 13:51:45,920 : MainThread : INFO : epoch: 1\n",
+      "2023-03-15 13:51:45,968 : MainThread : INFO : epoch: 2\n",
+      "2023-03-15 13:51:46,017 : MainThread : INFO : epoch: 3\n",
+      "2023-03-15 13:51:46,067 : MainThread : INFO : epoch: 4\n",
+      "2023-03-15 13:51:46,116 : MainThread : INFO : epoch: 5\n",
+      "2023-03-15 13:51:46,167 : MainThread : INFO : epoch: 6\n",
+      "2023-03-15 13:51:46,215 : MainThread : INFO : epoch: 7\n",
+      "2023-03-15 13:51:46,263 : MainThread : INFO : epoch: 8\n",
+      "2023-03-15 13:51:46,311 : MainThread : INFO : epoch: 9\n",
+      "2023-03-15 13:51:46,815 : MainThread : INFO : epoch: 0\n",
+      "2023-03-15 13:51:46,916 : MainThread : INFO : epoch: 1\n",
+      "2023-03-15 13:51:46,966 : MainThread : INFO : epoch: 2\n",
+      "2023-03-15 13:51:47,015 : MainThread : INFO : epoch: 3\n",
+      "2023-03-15 13:51:47,063 : MainThread : INFO : epoch: 4\n",
+      "2023-03-15 13:51:47,112 : MainThread : INFO : epoch: 5\n",
+      "2023-03-15 13:51:47,161 : MainThread : INFO : epoch: 6\n",
+      "2023-03-15 13:51:47,209 : MainThread : INFO : epoch: 7\n",
+      "2023-03-15 13:51:47,257 : MainThread : INFO : epoch: 8\n",
+      "2023-03-15 13:51:47,306 : MainThread : INFO : epoch: 9\n"
      ]
     }
    ],
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -210,13 +210,13 @@
        "[750 rows x 2 columns]"
       ]
      },
-     "execution_count": 12,
+     "execution_count": 6,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
-    "atomic_model = HoltWintersAtomic(trend=\"add\", date_col = \"date\", date_freq = \"D\")\n",
+    "atomic_model = HoltWintersAtomic(trend=\"add\", date_col = \"date\", date_freq = \"D\", target_col = \"yt\")\n",
     "atomic_model.fit(atomic_df[['date', 'yt']])\n",
     "predicted_df = atomic_model.predict(atomic_df[['date','yt']])\n",
     "atomic_df.set_index('date').join(predicted_df)[['yt','yt_hat']]"
@@ -224,10 +224,156 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# Pooled Holt-Winters"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>date</th>\n",
+       "      <th>yt</th>\n",
+       "      <th>model_id</th>\n",
+       "      <th>yt_hat</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>2022-01-01</td>\n",
+       "      <td>0.233470</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.500518</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2022-01-02</td>\n",
+       "      <td>0.588021</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.500496</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>2022-01-03</td>\n",
+       "      <td>0.924158</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.500475</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>2022-01-04</td>\n",
+       "      <td>0.142893</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.500453</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>2022-01-05</td>\n",
+       "      <td>0.308549</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0.500432</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1495</th>\n",
+       "      <td>2024-01-16</td>\n",
+       "      <td>0.343628</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.484244</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1496</th>\n",
+       "      <td>2024-01-17</td>\n",
+       "      <td>0.283204</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.484193</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1497</th>\n",
+       "      <td>2024-01-18</td>\n",
+       "      <td>0.502999</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.484142</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1498</th>\n",
+       "      <td>2024-01-19</td>\n",
+       "      <td>0.844140</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.484092</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1499</th>\n",
+       "      <td>2024-01-20</td>\n",
+       "      <td>0.511688</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.484041</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1500 rows × 4 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           date        yt  model_id    yt_hat\n",
+       "0    2022-01-01  0.233470         0  0.500518\n",
+       "1    2022-01-02  0.588021         0  0.500496\n",
+       "2    2022-01-03  0.924158         0  0.500475\n",
+       "3    2022-01-04  0.142893         0  0.500453\n",
+       "4    2022-01-05  0.308549         0  0.500432\n",
+       "...         ...       ...       ...       ...\n",
+       "1495 2024-01-16  0.343628         1  0.484244\n",
+       "1496 2024-01-17  0.283204         1  0.484193\n",
+       "1497 2024-01-18  0.502999         1  0.484142\n",
+       "1498 2024-01-19  0.844140         1  0.484092\n",
+       "1499 2024-01-20  0.511688         1  0.484041\n",
+       "\n",
+       "[1500 rows x 4 columns]"
+      ]
+     },
+     "execution_count": 8,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "holt_winters_pooled_model = HoltWintersPooled(trend=\"add\", date_col = \"date\", date_freq = \"D\", model_id_col = \"model_id\", target_col = \"yt\")\n",
+    "holt_winters_pooled_model.fit(pooled_df[['date', 'yt', 'model_id']], y = None)\n",
+    "predicted_df = holt_winters_pooled_model.predict(pooled_df[['date','yt', 'model_id']])\n",
+    "pooled_df[['date', 'yt', 'model_id']].merge(predicted_df, on = ['date', 'model_id'], how = 'left')"
+   ]
   }
  ],
  "metadata": {
