adding save models using joblib.

--- a/01_run_existing_models.ipynb
+++ b/01_run_existing_models.ipynb
@@ -7,7 +7,8 @@
    "outputs": [],
    "source": [
     "from engine import LassoRegressor, HoltWintersAtomic, HoltWintersPooled\n",
-    "from utils import generate_synthetic_data"
+    "from utils import generate_synthetic_data\n",
+    "import joblib"
    ]
   },
   {
@@ -373,6 +374,37 @@
     "holt_winters_pooled_model.fit(pooled_df[['date', 'yt', 'model_id']], y = None)\n",
     "predicted_df = holt_winters_pooled_model.predict(pooled_df[['date','yt', 'model_id']])\n",
     "pooled_df[['date', 'yt', 'model_id']].merge(predicted_df, on = ['date', 'model_id'], how = 'left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Saving all the models using joblib"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "['holt_winters_pooled_model.pkl']"
+      ]
+     },
+     "execution_count": 10,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "joblib.dump(lasso_model, \"lasso_model.pkl\")\n",
+    "joblib.dump(atomic_model, \"atomic_model.pkl\")\n",
+    "joblib.dump(holt_winters_pooled_model, \"holt_winters_pooled_model.pkl\")"
    ]
   }
  ],
