adding distributed notebook.

--- a/03_hld.ipynb
+++ b/03_hld.ipynb
@@ -76,31 +76,39 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "__ConfigManager:__\n",
+    "\n",
+    "1. Read configs (`ConfigManager`)\n",
+    "2. Validate configs (`Parser`)\n",
+    "3. return `model_config` and `data_config`\n",
+    "\n",
     "__DataLoader:__\n",
     "\n",
-    "1. Read configs (ConfigManager)\n",
-    "2. Validate configs (Parser)\n",
-    "3. Read data  (IOHandler)\n",
-    "4. Extract data info  (MetadataExtractor)\n",
-    "5. Validate data (Validator)\n",
-    "6. Log info related to data (Logger)\n",
-    "7. Parse data in right format (Parser)\n",
-    "8. Return data and configs (DataLoader)\n",
+    "1. Read data  (`IOHandler`)\n",
+    "2. Parse data in right format (`Parser`)\n",
+    "3. Extract data info  (`MetadataExtractor`)\n",
+    "4. Validate data (`Validator`)\n",
+    "5. return `model_input_data` (__`metadata` NOT required now__)\n",
     "\n",
+    "__Logging should be only critical and warning in setup 1 to 4. Any other info logs has to be shown in step 5.__\n",
     "\n",
     "__ModelTransformer:__\n",
     "\n",
-    "1. Initialize using the configs (ModelTransformer)\n",
+    "1. Initialize using the configs (`ModelTransformer`)\n",
     "\n",
     "__Model:__\n",
     "\n",
-    "1. Initialize using the configs (Model)\n",
+    "1. Initialize using the configs (`Model`)\n",
     "\n",
     "__Pipeline:__\n",
     "\n",
-    "1. Pipeline = ModelTransformer + Model\n",
+    "1. `Pipeline = ModelTransformer + Model`\n",
     "2. Pipeline.fit(data)\n",
-    "3. Pipeline.predict(data)"
+    "3. Pipeline.predict(data)\n",
+    "\n",
+    "__Logger:__\n",
+    "\n",
+    "1. Log info related to data/model/other metadata (`Logger`): We need to see how we fo `file handler` (info) and `streaming handler` (critical or warning)."
    ]
   },
   {
@@ -108,7 +116,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### __`GC V1 - APIs`__\n",
+    "### __GC V1 - APIs__\n",
     "\n",
     "```python\n",
     "from lola_generator_components.so.models import HoltWinters\n",
@@ -122,14 +130,16 @@
     "model.score(X_test, y_test)\n",
     "```\n",
     "\n",
-    "### __`GC V2 - APIs`__\n",
+    "\n",
+    "### __GC V2 - APIs__\n",
     "\n",
     "```python\n",
     "from lola_generator_components.so.models import HoltWinters\n",
-    "from lola_generator_components.so.processors import HoltWintersTransformer\n",
+    "from lola_generator_components.so.models import HoltWintersTransformer\n",
     "from lola_generator_components.utils import pipeline, time_series_split, DataLoader, ConfigManager\n",
     "\n",
-    "model_config, data_config = ConfigManager(**data_config).load_configs()\n",
+    "model_config, data_config = ConfigManager().parse_and_validate().load_configs()\n",
+    "# model_config, data_config = ConfigManager(model_config_path = \"\", data_config_path = \"\").parse_and_validate().load_configs()\n",
     "data = DataLoader(**data_config[\"io_config\"]).load_data()\n",
     "pipeline = pipeline([\n",
     "                        (\"ModelTransformer\", HoltWintersTransformer(**data_config[\"processor_config\"])),\n",
@@ -137,7 +147,7 @@
     "                    ])\n",
     "X_train, y_train, X_test, y_test = time_series_split(data, **data_config[\"split_config\"])\n",
     "pipeline.fit(X_train, y_train)\n",
-    "pipeline.recommend(X_test)\n",
+    "pipeline.predict(X_test)\n",
     "pipeline.score(X_test, y_test)\n",
     "```"
    ]
@@ -231,8 +241,21 @@
     "        'aggregation_function': {\n",
     "            'quantity': ['sum', 'mean'],\n",
     "        },\n",
+    "        \"numerical_features\": [\"brand_id\", \"some_float_variable\"],\n",
+    "        \"category_features\": [\"brand_id\", \"some_float_variable\"],\n",
+    "        \"target\": \"quantity\",\n",
+    "        # some configs can be here related to transformer\n",
     "        },\n",
-    "    }"
+    "        \"split_config\":{\n",
+    "            \"split_type\": \"time\",\n",
+    "            \"split_column\": \"date\",\n",
+    "            \"split_date\": None,\n",
+    "        }\n",
+    "    }\n",
+    "\n",
+    "# split_date = None, meaning max date in data\n",
+    "# features = None, meaning all columns except target\n",
+    "# Other than date key other elements are optional"
    ]
   },
   {
@@ -243,18 +266,12 @@
    "source": [
     "sample_data_config_user_input = {\n",
     "    'io_config': {\n",
-    "        'select_columns': ['poc_id', 'sku_id', 'quantity', 'date'],\n",
+    "        'select_columns': ['POC_ID', 'sku_id', 'quantity', 'date'],\n",
     "        'data_type_dict': {\n",
-    "            'number': ['quantity'],\n",
-    "            'category': ['poc_id', 'sku_id'],\n",
     "            'date': ['date'],\n",
-    "            'boolean': None,\n",
     "            },\n",
     "        'column_mapper': {\n",
-    "            'poc_id': 'poc_id',\n",
-    "            'sku_id': 'sku_id',\n",
-    "            'quantity': 'quantity',\n",
-    "            'date': 'date',\n",
+    "            'poc_id': 'POC_ID'\n",
     "            },\n",
     "        },\n",
     "    'parsing_config': {\n",
@@ -275,9 +292,186 @@
     "        'aggregation_function': {\n",
     "            'quantity': ['sum'],\n",
     "        },\n",
+    "        \"numerical_features\": [\"brand_id\", \"some_float_variable\"],\n",
+    "        \"category_features\": [\"brand_id\", \"some_float_variable\"],\n",
+    "        \"target\": \"quantity\",\n",
+    "        # some configs can be here related to transformer\n",
     "        },\n",
+    "        \"split_config\":{\n",
+    "            \"split_type\": \"time\",\n",
+    "            \"split_column\": \"date\",\n",
+    "            \"split_date\": \"15/12/2023\",\n",
+    "        }\n",
     "    }"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "col_mapper_default = {'poc_id': 'poc_id','sku_id': 'sku_id','quantity': 'quantity','date': 'date'}\n",
+    "col_mapper_user = {'poc_id': 'POC_ID', 'sku_id': None}\n",
+    "\n",
+    "def update_config(dict_1, dict_2):\n",
+    "    return {**dict_1, **dict_2}"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 11,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{'poc_id': 'POC_ID', 'sku_id': None, 'quantity': 'quantity', 'date': 'date'}"
+      ]
+     },
+     "execution_count": 11,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "update_config(col_mapper_default, col_mapper_user)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>default</th>\n",
+       "      <th>user</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>poc_id</th>\n",
+       "      <td>poc_id</td>\n",
+       "      <td>POC_ID</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sku_id</th>\n",
+       "      <td>sku_id</td>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>quantity</th>\n",
+       "      <td>quantity</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>date</th>\n",
+       "      <td>date</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "           default    user\n",
+       "poc_id      poc_id  POC_ID\n",
+       "sku_id      sku_id    None\n",
+       "quantity  quantity     NaN\n",
+       "date          date     NaN"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# import pandas as pd\n",
+    "# (pd.DataFrame([col_mapper_default]).T).rename(columns={0: 'default'}).join(pd.DataFrame([col_mapper_user]).T.rename(columns={0: 'user'}))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 18,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>0</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>poc_id</th>\n",
+       "      <td>POC_ID</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>sku_id</th>\n",
+       "      <td>None</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "             0\n",
+       "poc_id  POC_ID\n",
+       "sku_id    None"
+      ]
+     },
+     "execution_count": 18,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
