--- a/04_distributed_model_traning.ipynb
+++ b/04_distributed_model_traning.ipynb
@@ -4,18 +4,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stderr",
-     "output_type": "stream",
-     "text": [
-      "2023-03-15 15:10:27,595\tINFO worker.py:1553 -- Started a local Ray instance.\n",
-      "\u001b[2m\u001b[36m(raylet)\u001b[0m Spilled 2929 MiB, 2 objects, write throughput 535 MiB/s. Set RAY_verbose_spill_logs=0 to disable this message.\n",
-      "\u001b[2m\u001b[36m(raylet)\u001b[0m Spilled 5859 MiB, 10 objects, write throughput 524 MiB/s.\n",
-      "\u001b[2m\u001b[36m(raylet)\u001b[0m Spilled 8789 MiB, 18 objects, write throughput 529 MiB/s.\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "from lightgbm_ray import RayLGBMClassifier, RayParams\n",
     "import numpy as np\n",
@@ -35,6 +24,23 @@
     "pred_ray = clf.predict(X, ray_params=RayParams(num_actors=2))\n",
     "print(pred_ray)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ray\n",
+    "ray.shutdown()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
