--- a/01_run_existing_models.ipynb
+++ b/01_run_existing_models.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -13,50 +13,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-15 13:51:44,669 : MainThread : INFO : epoch: 0\n",
-      "2023-03-15 13:51:44,908 : MainThread : INFO : epoch: 1\n",
-      "2023-03-15 13:51:44,963 : MainThread : INFO : epoch: 2\n",
-      "2023-03-15 13:51:45,020 : MainThread : INFO : epoch: 3\n",
-      "2023-03-15 13:51:45,073 : MainThread : INFO : epoch: 4\n",
-      "2023-03-15 13:51:45,127 : MainThread : INFO : epoch: 5\n",
-      "2023-03-15 13:51:45,178 : MainThread : INFO : epoch: 6\n",
-      "2023-03-15 13:51:45,230 : MainThread : INFO : epoch: 7\n",
-      "2023-03-15 13:51:45,282 : MainThread : INFO : epoch: 8\n",
-      "2023-03-15 13:51:45,330 : MainThread : INFO : epoch: 9\n",
-      "2023-03-15 13:51:45,825 : MainThread : INFO : epoch: 0\n",
-      "2023-03-15 13:51:45,920 : MainThread : INFO : epoch: 1\n",
-      "2023-03-15 13:51:45,968 : MainThread : INFO : epoch: 2\n",
-      "2023-03-15 13:51:46,017 : MainThread : INFO : epoch: 3\n",
-      "2023-03-15 13:51:46,067 : MainThread : INFO : epoch: 4\n",
-      "2023-03-15 13:51:46,116 : MainThread : INFO : epoch: 5\n",
-      "2023-03-15 13:51:46,167 : MainThread : INFO : epoch: 6\n",
-      "2023-03-15 13:51:46,215 : MainThread : INFO : epoch: 7\n",
-      "2023-03-15 13:51:46,263 : MainThread : INFO : epoch: 8\n",
-      "2023-03-15 13:51:46,311 : MainThread : INFO : epoch: 9\n",
-      "2023-03-15 13:51:46,815 : MainThread : INFO : epoch: 0\n",
-      "2023-03-15 13:51:46,916 : MainThread : INFO : epoch: 1\n",
-      "2023-03-15 13:51:46,966 : MainThread : INFO : epoch: 2\n",
-      "2023-03-15 13:51:47,015 : MainThread : INFO : epoch: 3\n",
-      "2023-03-15 13:51:47,063 : MainThread : INFO : epoch: 4\n",
-      "2023-03-15 13:51:47,112 : MainThread : INFO : epoch: 5\n",
-      "2023-03-15 13:51:47,161 : MainThread : INFO : epoch: 6\n",
-      "2023-03-15 13:51:47,209 : MainThread : INFO : epoch: 7\n",
-      "2023-03-15 13:51:47,257 : MainThread : INFO : epoch: 8\n",
-      "2023-03-15 13:51:47,306 : MainThread : INFO : epoch: 9\n"
+      "2023-03-15 19:56:16,978 : MainThread : INFO : epoch: 0\n",
+      "2023-03-15 19:56:17,212 : MainThread : INFO : epoch: 1\n",
+      "2023-03-15 19:56:17,275 : MainThread : INFO : epoch: 2\n",
+      "2023-03-15 19:56:17,343 : MainThread : INFO : epoch: 3\n",
+      "2023-03-15 19:56:17,403 : MainThread : INFO : epoch: 4\n",
+      "2023-03-15 19:56:17,465 : MainThread : INFO : epoch: 5\n",
+      "2023-03-15 19:56:17,527 : MainThread : INFO : epoch: 6\n",
+      "2023-03-15 19:56:17,584 : MainThread : INFO : epoch: 7\n",
+      "2023-03-15 19:56:17,639 : MainThread : INFO : epoch: 8\n",
+      "2023-03-15 19:56:17,694 : MainThread : INFO : epoch: 9\n",
+      "2023-03-15 19:56:18,227 : MainThread : INFO : epoch: 0\n",
+      "2023-03-15 19:56:18,380 : MainThread : INFO : epoch: 1\n",
+      "2023-03-15 19:56:18,434 : MainThread : INFO : epoch: 2\n",
+      "2023-03-15 19:56:18,487 : MainThread : INFO : epoch: 3\n",
+      "2023-03-15 19:56:18,542 : MainThread : INFO : epoch: 4\n",
+      "2023-03-15 19:56:18,595 : MainThread : INFO : epoch: 5\n",
+      "2023-03-15 19:56:18,648 : MainThread : INFO : epoch: 6\n",
+      "2023-03-15 19:56:18,701 : MainThread : INFO : epoch: 7\n",
+      "2023-03-15 19:56:18,758 : MainThread : INFO : epoch: 8\n",
+      "2023-03-15 19:56:18,811 : MainThread : INFO : epoch: 9\n",
+      "2023-03-15 19:56:19,350 : MainThread : INFO : epoch: 0\n",
+      "2023-03-15 19:56:19,451 : MainThread : INFO : epoch: 1\n",
+      "2023-03-15 19:56:19,508 : MainThread : INFO : epoch: 2\n",
+      "2023-03-15 19:56:19,566 : MainThread : INFO : epoch: 3\n",
+      "2023-03-15 19:56:19,625 : MainThread : INFO : epoch: 4\n",
+      "2023-03-15 19:56:19,680 : MainThread : INFO : epoch: 5\n",
+      "2023-03-15 19:56:19,745 : MainThread : INFO : epoch: 6\n",
+      "2023-03-15 19:56:19,802 : MainThread : INFO : epoch: 7\n",
+      "2023-03-15 19:56:19,872 : MainThread : INFO : epoch: 8\n",
+      "2023-03-15 19:56:19,951 : MainThread : INFO : epoch: 9\n"
      ]
     }
    ],
    "source": [
     "lasso_df = generate_synthetic_data(model_name=\"lasso\", synthetic_data_config={\"m\": 100, \"n\": 20, \"sigma\": 5, \"density\": 0.2})\n",
     "atomic_df = generate_synthetic_data(model_name=\"atomic\", synthetic_data_config={\"n\" : 20, \"time_period\" : 750}).reset_index()\n",
-    "pooled_df = generate_synthetic_data(model_name=\"pooled\", synthetic_data_config={\"n_models\" : 2, \"n\" : 20, \"time_period\" : 750}).reset_index()"
+    "pooled_df = generate_synthetic_data(model_name=\"pooled\", synthetic_data_config={\"n_models\" : 2, \"n\" : 20, \"time_period\" : 750}).reset_index()\n",
+    "lasso_df.to_parquet(\"lasso_df.parquet\")\n",
+    "atomic_df.to_parquet(\"atomic_df.parquet\")\n",
+    "pooled_df.to_parquet(\"pooled_df.parquet\")"
    ]
   },
   {
@@ -374,6 +377,27 @@
     "holt_winters_pooled_model.fit(pooled_df[['date', 'yt', 'model_id']], y = None)\n",
     "predicted_df = holt_winters_pooled_model.predict(pooled_df[['date','yt', 'model_id']])\n",
     "pooled_df[['date', 'yt', 'model_id']].merge(predicted_df, on = ['date', 'model_id'], how = 'left')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 9,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "{0: HoltWintersAtomic(trend='add'), 1: HoltWintersAtomic(trend='add')}"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "holt_winters_pooled_model.models\n",
+    "# https://www.databricks.com/blog/2021/09/21/managing-model-ensembles-with-mlflow.html"
    ]
   },
   {
