--- a/01_run_existing_models.ipynb
+++ b/01_run_existing_models.ipynb
@@ -13,43 +13,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
      "name": "stderr",
      "output_type": "stream",
      "text": [
-      "2023-03-15 19:56:16,978 : MainThread : INFO : epoch: 0\n",
-      "2023-03-15 19:56:17,212 : MainThread : INFO : epoch: 1\n",
-      "2023-03-15 19:56:17,275 : MainThread : INFO : epoch: 2\n",
-      "2023-03-15 19:56:17,343 : MainThread : INFO : epoch: 3\n",
-      "2023-03-15 19:56:17,403 : MainThread : INFO : epoch: 4\n",
-      "2023-03-15 19:56:17,465 : MainThread : INFO : epoch: 5\n",
-      "2023-03-15 19:56:17,527 : MainThread : INFO : epoch: 6\n",
-      "2023-03-15 19:56:17,584 : MainThread : INFO : epoch: 7\n",
-      "2023-03-15 19:56:17,639 : MainThread : INFO : epoch: 8\n",
-      "2023-03-15 19:56:17,694 : MainThread : INFO : epoch: 9\n",
-      "2023-03-15 19:56:18,227 : MainThread : INFO : epoch: 0\n",
-      "2023-03-15 19:56:18,380 : MainThread : INFO : epoch: 1\n",
-      "2023-03-15 19:56:18,434 : MainThread : INFO : epoch: 2\n",
-      "2023-03-15 19:56:18,487 : MainThread : INFO : epoch: 3\n",
-      "2023-03-15 19:56:18,542 : MainThread : INFO : epoch: 4\n",
-      "2023-03-15 19:56:18,595 : MainThread : INFO : epoch: 5\n",
-      "2023-03-15 19:56:18,648 : MainThread : INFO : epoch: 6\n",
-      "2023-03-15 19:56:18,701 : MainThread : INFO : epoch: 7\n",
-      "2023-03-15 19:56:18,758 : MainThread : INFO : epoch: 8\n",
-      "2023-03-15 19:56:18,811 : MainThread : INFO : epoch: 9\n",
-      "2023-03-15 19:56:19,350 : MainThread : INFO : epoch: 0\n",
-      "2023-03-15 19:56:19,451 : MainThread : INFO : epoch: 1\n",
-      "2023-03-15 19:56:19,508 : MainThread : INFO : epoch: 2\n",
-      "2023-03-15 19:56:19,566 : MainThread : INFO : epoch: 3\n",
-      "2023-03-15 19:56:19,625 : MainThread : INFO : epoch: 4\n",
-      "2023-03-15 19:56:19,680 : MainThread : INFO : epoch: 5\n",
-      "2023-03-15 19:56:19,745 : MainThread : INFO : epoch: 6\n",
-      "2023-03-15 19:56:19,802 : MainThread : INFO : epoch: 7\n",
-      "2023-03-15 19:56:19,872 : MainThread : INFO : epoch: 8\n",
-      "2023-03-15 19:56:19,951 : MainThread : INFO : epoch: 9\n"
+      "2023-03-15 19:57:44,121 : MainThread : INFO : epoch: 0\n",
+      "2023-03-15 19:57:44,250 : MainThread : INFO : epoch: 1\n",
+      "2023-03-15 19:57:44,320 : MainThread : INFO : epoch: 2\n",
+      "2023-03-15 19:57:44,379 : MainThread : INFO : epoch: 3\n",
+      "2023-03-15 19:57:44,436 : MainThread : INFO : epoch: 4\n",
+      "2023-03-15 19:57:44,496 : MainThread : INFO : epoch: 5\n",
+      "2023-03-15 19:57:44,548 : MainThread : INFO : epoch: 6\n",
+      "2023-03-15 19:57:44,602 : MainThread : INFO : epoch: 7\n",
+      "2023-03-15 19:57:44,659 : MainThread : INFO : epoch: 8\n",
+      "2023-03-15 19:57:44,713 : MainThread : INFO : epoch: 9\n",
+      "2023-03-15 19:57:45,380 : MainThread : INFO : epoch: 0\n",
+      "2023-03-15 19:57:45,480 : MainThread : INFO : epoch: 1\n",
+      "2023-03-15 19:57:45,533 : MainThread : INFO : epoch: 2\n",
+      "2023-03-15 19:57:45,588 : MainThread : INFO : epoch: 3\n",
+      "2023-03-15 19:57:45,644 : MainThread : INFO : epoch: 4\n",
+      "2023-03-15 19:57:45,697 : MainThread : INFO : epoch: 5\n",
+      "2023-03-15 19:57:45,750 : MainThread : INFO : epoch: 6\n",
+      "2023-03-15 19:57:45,803 : MainThread : INFO : epoch: 7\n",
+      "2023-03-15 19:57:45,858 : MainThread : INFO : epoch: 8\n",
+      "2023-03-15 19:57:45,913 : MainThread : INFO : epoch: 9\n",
+      "2023-03-15 19:57:46,443 : MainThread : INFO : epoch: 0\n",
+      "2023-03-15 19:57:46,547 : MainThread : INFO : epoch: 1\n",
+      "2023-03-15 19:57:46,600 : MainThread : INFO : epoch: 2\n",
+      "2023-03-15 19:57:46,653 : MainThread : INFO : epoch: 3\n",
+      "2023-03-15 19:57:46,708 : MainThread : INFO : epoch: 4\n",
+      "2023-03-15 19:57:46,763 : MainThread : INFO : epoch: 5\n",
+      "2023-03-15 19:57:46,818 : MainThread : INFO : epoch: 6\n",
+      "2023-03-15 19:57:46,872 : MainThread : INFO : epoch: 7\n",
+      "2023-03-15 19:57:46,931 : MainThread : INFO : epoch: 8\n",
+      "2023-03-15 19:57:46,984 : MainThread : INFO : epoch: 9\n"
      ]
     }
    ],
@@ -57,9 +57,12 @@
     "lasso_df = generate_synthetic_data(model_name=\"lasso\", synthetic_data_config={\"m\": 100, \"n\": 20, \"sigma\": 5, \"density\": 0.2})\n",
     "atomic_df = generate_synthetic_data(model_name=\"atomic\", synthetic_data_config={\"n\" : 20, \"time_period\" : 750}).reset_index()\n",
     "pooled_df = generate_synthetic_data(model_name=\"pooled\", synthetic_data_config={\"n_models\" : 2, \"n\" : 20, \"time_period\" : 750}).reset_index()\n",
-    "lasso_df.to_parquet(\"lasso_df.parquet\")\n",
-    "atomic_df.to_parquet(\"atomic_df.parquet\")\n",
-    "pooled_df.to_parquet(\"pooled_df.parquet\")"
+    "lasso_df.to_parquet(\"lasso_df.parquet\", index=False)\n",
+    "atomic_df.to_parquet(\"atomic_df.parquet\", index=False)\n",
+    "pooled_df.to_parquet(\"pooled_df.parquet\", index=False)\n",
+    "lasso_df.to_csv(\"lasso_df.csv\", index=False)\n",
+    "atomic_df.to_csv(\"atomic_df.csv\", index=False)\n",
+    "pooled_df.to_csv(\"pooled_df.csv\", index=False)"
    ]
   },
   {
